objects/Action_Item__c.object
<CustomObject>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Item__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Action Items</relationshipLabel>
        <relationshipName>Action_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Action Item</label>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Action Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <recordTypes>
        <fullName>State_Formation</fullName>
        <active>true</active>
        <label>State Formation</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>